# mcp-web-extractor

./: .editorconfig  .gitattributes  .gitignore  INSTALL_UVX.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  example_usage.py  publish.bat  publish.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: core-server-exploration.md  download-tool-exploratorations.md  python-tool.md  ship-mcp-pip.md
src/trafilatura_mcp/: __init__.py  server.py
